Address comments
Changes:
- Changed some names fir better readability
- Added test for validations

Signed-off-by: Andrey Pleskach <ples@aiven.io>