@@ -11,32 +11,13 @@
 
 package org.opensearch.security.dlic.rest.api;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import org.opensearch.action.index.IndexResponse;
-import org.opensearch.client.Client;
-import org.opensearch.cluster.service.ClusterService;
-import org.opensearch.common.settings.Settings;
-import org.opensearch.core.xcontent.ToXContent;
-import org.opensearch.rest.RestChannel;
-import org.opensearch.security.auditlog.AuditLog;
-import org.opensearch.security.configuration.AdminDNs;
-import org.opensearch.security.configuration.ConfigurationRepository;
-import org.opensearch.security.dlic.rest.validation.EndpointValidator;
-import org.opensearch.security.dlic.rest.validation.RequestContentValidator;
-import org.opensearch.security.dlic.rest.validation.RequestContentValidator.DataType;
-import org.opensearch.security.privileges.PrivilegesEvaluator;
-import org.opensearch.security.securityconf.impl.CType;
-import org.opensearch.security.securityconf.impl.SecurityDynamicConfiguration;
-import org.opensearch.security.securityconf.impl.v7.ConfigV7;
-import org.opensearch.security.ssl.transport.PrincipalExtractor;
-import org.opensearch.security.support.ConfigConstants;
-import org.opensearch.threadpool.ThreadPool;
+import static org.opensearch.rest.RestRequest.Method.GET;
+import static org.opensearch.rest.RestRequest.Method.PUT;
+import static org.opensearch.security.dlic.rest.api.Responses.ok;
+import static org.opensearch.security.dlic.rest.api.Responses.response;
+import static org.opensearch.security.dlic.rest.support.Utils.addRoutesPrefix;
 
 import java.io.IOException;
-import java.nio.file.Path;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -44,11 +25,24 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static org.opensearch.rest.RestRequest.Method.GET;
-import static org.opensearch.rest.RestRequest.Method.PUT;
-import static org.opensearch.security.dlic.rest.api.Responses.ok;
-import static org.opensearch.security.dlic.rest.api.Responses.response;
-import static org.opensearch.security.dlic.rest.support.Utils.addRoutesPrefix;
+import org.opensearch.action.index.IndexResponse;
+import org.opensearch.client.Client;
+import org.opensearch.cluster.service.ClusterService;
+import org.opensearch.common.settings.Settings;
+import org.opensearch.core.xcontent.ToXContent;
+import org.opensearch.rest.RestChannel;
+import org.opensearch.security.dlic.rest.validation.EndpointValidator;
+import org.opensearch.security.dlic.rest.validation.RequestContentValidator;
+import org.opensearch.security.dlic.rest.validation.RequestContentValidator.DataType;
+import org.opensearch.security.securityconf.impl.CType;
+import org.opensearch.security.securityconf.impl.SecurityDynamicConfiguration;
+import org.opensearch.security.securityconf.impl.v7.ConfigV7;
+import org.opensearch.security.support.ConfigConstants;
+import org.opensearch.threadpool.ThreadPool;
+
+import com.fasterxml.jackson.databind.JsonNode;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 
 public class MultiTenancyConfigApiAction extends AbstractApiAction {
 
@@ -60,7 +54,7 @@ public class MultiTenancyConfigApiAction extends AbstractApiAction {
         ImmutableList.of(new Route(GET, "/tenancy/config"), new Route(PUT, "/tenancy/config"))
     );
 
-    private final static Set<String> ACCEPTABLE_DEFAULT_TENANTS = ImmutableSet.of(
+    private final static Set<String> ACCEPTABLE_DEFAULT_TENANTS = Set.of(
         ConfigConstants.TENANCY_GLOBAL_TENANT_DEFAULT_NAME,
         ConfigConstants.TENANCY_GLOBAL_TENANT_NAME,
         ConfigConstants.TENANCY_PRIVATE_TENANT_NAME
@@ -77,23 +71,12 @@ public class MultiTenancyConfigApiAction extends AbstractApiAction {
     }
 
     public MultiTenancyConfigApiAction(
-        final Settings settings,
-        final Path configPath,
-        final AdminDNs adminDNs,
-        final ConfigurationRepository cl,
-        final ClusterService cs,
-        final PrincipalExtractor principalExtractor,
-        final PrivilegesEvaluator evaluator,
+        final ClusterService clusterService,
         final ThreadPool threadPool,
-        final AuditLog auditLog
+        final SecurityApiDependencies securityApiDependencies
     ) {
-        super(settings, configPath, adminDNs, cl, cs, principalExtractor, evaluator, threadPool, auditLog);
+        super(Endpoint.TENANTS, clusterService, threadPool, securityApiDependencies);
         this.requestHandlersBuilder.configureRequestHandlers(this::multiTenancyConfigApiRequestHandlers);
-    }
-
-    @Override
-    protected Endpoint getEndpoint() {
-        return Endpoint.TENANTS;
     }
 
     @Override
@@ -104,19 +87,15 @@ public class MultiTenancyConfigApiAction extends AbstractApiAction {
     @Override
     protected EndpointValidator createEndpointValidator() {
         return new EndpointValidator() {
-            @Override
-            public String resourceName() {
-                return null;
-            }
 
             @Override
             public Endpoint endpoint() {
-                return getEndpoint();
+                return endpoint;
             }
 
             @Override
             public RestApiAdminPrivilegesEvaluator restApiAdminPrivilegesEvaluator() {
-                return restApiAdminPrivilegesEvaluator;
+                return securityApiDependencies.restApiAdminPrivilegesEvaluator();
             }
 
             @Override
@@ -129,7 +108,7 @@ public class MultiTenancyConfigApiAction extends AbstractApiAction {
 
                     @Override
                     public Settings settings() {
-                        return settings;
+                        return securityApiDependencies.settings();
                     }
 
                     @Override
@@ -208,7 +187,8 @@ public class MultiTenancyConfigApiAction extends AbstractApiAction {
             return;
         }
 
-        final Set<String> availableTenants = cl.getConfiguration(CType.TENANTS)
+        final Set<String> availableTenants = securityApiDependencies.configurationRepository()
+            .getConfiguration(CType.TENANTS)
             .getCEntries()
             .keySet()
             .stream()
