@@ -12,7 +12,6 @@
 package org.opensearch.security.dlic.rest.api;
 
 import java.io.IOException;
-import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -28,18 +27,13 @@ import org.opensearch.common.settings.Settings;
 import org.opensearch.core.rest.RestStatus;
 import org.opensearch.rest.RestRequest;
 import org.opensearch.rest.RestRequest.Method;
-import org.opensearch.security.auditlog.AuditLog;
-import org.opensearch.security.configuration.AdminDNs;
-import org.opensearch.security.configuration.ConfigurationRepository;
 import org.opensearch.security.dlic.rest.validation.EndpointValidator;
 import org.opensearch.security.dlic.rest.validation.RequestContentValidator;
 import org.opensearch.security.dlic.rest.validation.RequestContentValidator.DataType;
 import org.opensearch.security.dlic.rest.validation.ValidationResult;
-import org.opensearch.security.privileges.PrivilegesEvaluator;
 import org.opensearch.security.securityconf.impl.CType;
 import org.opensearch.security.securityconf.impl.NodesDn;
 import org.opensearch.security.securityconf.impl.SecurityDynamicConfiguration;
-import org.opensearch.security.ssl.transport.PrincipalExtractor;
 import org.opensearch.security.support.ConfigConstants;
 import org.opensearch.threadpool.ThreadPool;
 
@@ -61,8 +55,6 @@ import static org.opensearch.security.dlic.rest.support.Utils.addRoutesPrefix;
  */
 public class NodesDnApiAction extends AbstractApiAction {
 
-    public static final String RESOURCE_NAME = "nodesdn";
-
     public static final String STATIC_OPENSEARCH_YML_NODES_DN = "STATIC_OPENSEARCH_YML_NODES_DN";
     private final List<String> staticNodesDnFromEsYml;
 
@@ -79,32 +71,21 @@ public class NodesDnApiAction extends AbstractApiAction {
 
     @Inject
     public NodesDnApiAction(
-        final Settings settings,
-        final Path configPath,
-        final AdminDNs adminDNs,
-        final ConfigurationRepository cl,
-        final ClusterService cs,
-        final PrincipalExtractor principalExtractor,
-        final PrivilegesEvaluator evaluator,
-        ThreadPool threadPool,
-        AuditLog auditLog
+        final ClusterService clusterService,
+        final ThreadPool threadPool,
+        final SecurityApiDependencies securityApiDependencies
     ) {
-        super(settings, configPath, adminDNs, cl, cs, principalExtractor, evaluator, threadPool, auditLog);
-        this.staticNodesDnFromEsYml = settings.getAsList(ConfigConstants.SECURITY_NODES_DN, Collections.emptyList());
+        super(Endpoint.NODESDN, clusterService, threadPool, securityApiDependencies);
+        this.staticNodesDnFromEsYml = securityApiDependencies.settings().getAsList(ConfigConstants.SECURITY_NODES_DN, List.of());
         this.requestHandlersBuilder.configureRequestHandlers(this::nodesDnApiRequestHandlers);
     }
 
     @Override
     public List<Route> routes() {
-        if (settings.getAsBoolean(ConfigConstants.SECURITY_NODES_DN_DYNAMIC_CONFIG_ENABLED, false)) {
+        if (securityApiDependencies.settings().getAsBoolean(ConfigConstants.SECURITY_NODES_DN_DYNAMIC_CONFIG_ENABLED, false)) {
             return routes;
         }
         return Collections.emptyList();
-    }
-
-    @Override
-    protected Endpoint getEndpoint() {
-        return Endpoint.NODESDN;
     }
 
     @Override
@@ -112,6 +93,7 @@ public class NodesDnApiAction extends AbstractApiAction {
         return CType.NODESDN;
     }
 
+    @Override
     protected void consumeParameters(final RestRequest request) {
         request.param("name");
         request.param("show_all");
@@ -141,23 +123,19 @@ public class NodesDnApiAction extends AbstractApiAction {
     @Override
     protected EndpointValidator createEndpointValidator() {
         return new EndpointValidator() {
-            @Override
-            public String resourceName() {
-                return RESOURCE_NAME;
-            }
 
             @Override
             public Endpoint endpoint() {
-                return getEndpoint();
+                return endpoint;
             }
 
             @Override
             public RestApiAdminPrivilegesEvaluator restApiAdminPrivilegesEvaluator() {
-                return restApiAdminPrivilegesEvaluator;
+                return securityApiDependencies.restApiAdminPrivilegesEvaluator();
             }
 
             @Override
-            public ValidationResult<SecurityConfiguration> hasRightsToChangeEntity(SecurityConfiguration securityConfiguration)
+            public ValidationResult<SecurityConfiguration> isAllowedToChangeImmutableEntity(SecurityConfiguration securityConfiguration)
                 throws IOException {
                 if (STATIC_OPENSEARCH_YML_NODES_DN.equals(securityConfiguration.entityName())) {
                     return ValidationResult.error(
@@ -165,7 +143,7 @@ public class NodesDnApiAction extends AbstractApiAction {
                         forbiddenMessage("Resource '" + STATIC_OPENSEARCH_YML_NODES_DN + "' is read-only.")
                     );
                 }
-                return EndpointValidator.super.hasRightsToChangeEntity(securityConfiguration);
+                return EndpointValidator.super.isAllowedToChangeImmutableEntity(securityConfiguration);
             }
 
             @Override
@@ -178,7 +156,7 @@ public class NodesDnApiAction extends AbstractApiAction {
 
                     @Override
                     public Settings settings() {
-                        return settings;
+                        return securityApiDependencies.settings();
                     }
 
                     @Override
